--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "antd": "^5.23.0",
+    "dayjs": "^1.11.13"
   }
 }
