--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
     "antd": "^5.23.0",
     "dayjs": "^1.11.13"
   }
