--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@babel/preset-react": "^7.26.3",
     "babel-loader": "^9.2.1",
     "html-webpack-plugin": "^5.6.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
@@ -24,6 +22,9 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "antd": "^5.23.0",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.28.1"
   }
 }
